# webserver-benchmarks

./: README.md  bench  curl  request1.lua  request10.lua  slides.md
cpp/: .clang-format  .clangd  CMakeLists.txt  main.cc  myglaze.cpp  myglaze.h  myyyjson.cpp  myyyjson.h
drogon/: CMakeLists.txt  main.cc
go-gin/: batch-data-structs.go  build.sh  go.mod  go.sum  pk-data-structs.go  result  server.go  simd-simple-parser.go
httplib/: CMakeLists.txt  compile_commands.json  main.cpp
httplib/httplib/: httplib.h
